--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h3>这是什么样子的</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>nihao</title>
+</head>
+<body>
+    <p> 鉴于以往骑士对勇士的经历，系列赛以这种方式开局是令人惊讶的。骑士能在2015年总决赛上保持竞争力，并在去年强势逆转的原因，很大程度上是因为骑士控制了比赛的行进方式。为了不让勇士打疯，骑士尽他们最大的努力让每一场比赛变成一球一球的缠斗。他们对联盟其他对手最大的优势是他们有詹姆斯，NBA最聪明的掌控者和最大的对位难题，凯里—欧文则是联盟最好的单打得分手之一。<p/>
+
+</body>
+</html>
