--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>nihao</title>
+    <title>James</title>
+    <link href="star%20card.css" rel="stylesheet" type="text/css">
+    <link href="cubeFrame.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <p> 鉴于以往骑士对勇士的经历，系列赛以这种方式开局是令人惊讶的。骑士能在2015年总决赛上保持竞争力，并在去年强势逆转的原因，很大程度上是因为骑士控制了比赛的行进方式。为了不让勇士打疯，骑士尽他们最大的努力让每一场比赛变成一球一球的缠斗。他们对联盟其他对手最大的优势是他们有詹姆斯，NBA最聪明的掌控者和最大的对位难题，凯里—欧文则是联盟最好的单打得分手之一。<p/>
+    <header>
+        <p>NBA star card</p>
+        <div class="wrapper">
+            <div id="cube">
+                <div id="top" class="face"></div>
+                <div id="bottom" class="face"></div>
+                <div id="left" class="face"></div>
+                <div id="right" class="face"></div>
+                <div id="front" class="face"></div>
+                <div id="back" class="face"></div>
+            </div>
+        </div>
+    </header>
+    <div id="content">
+        <div id="sidebar">
+            <ul class="stars">
+                <li class="James"><a href="#">Lebron James</a></li>
+                <li class="Durrant"><a href="#">Kevin Durrant</a></li>
+                <li class="Curry"><a href="#">Steffen Curry</a></li>
+                <li class="Harden"><a href="#">James Harden</a></li>
+                <li class="Westbrook"><a href="#">Russell Westbrook</a></li>
+                <li class="Leonard"><a href="#">Kawhi Leonard</a></li>
+            </ul>
+        </div>
+        <div id="main">
+            <div class="starCard">
+                <img src="james1.jpg">
+                <div class="introFrameTop"></div>
+                <div class="introFrameBottom">
+                        <p class="intro">Lebron James<p class="year">(2016 Version)</p></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer></footer>
 
+    <script src="star%20card.js"></script>
 </body>
 </html>
